--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(hmc main.cpp
         core/Hamming.cpp
-        core/Hamming.hpp)
+        core/Hamming.hpp
+        core/Framework.hpp)
